# python-bytefmt

./: .gitignore  .pylintrc  Makefile  README.md  flake.nix  guix.scm  setup.cfg  setup.py
bytefmt/: __init__.py  bytefmt.py  cmd_bytefmt.py
tests/: test_bytefmt.py  test_cmd_bytefmt.py
