[metadata]
name = bytefmt
version = 0.1.1
description = "Format bytes into human readable format"
long_description = file: README.md
license = GPLv3+
author = "Ingo Ruhnke"
author_email = "grumbel@gmail.com"
url = https://github.com/Grumbel/python-bytefmt

[options]
packages = find:

[options.entry_points]
console_scripts =
  bytefmt = bytefmt.cmd_bytefmt:main_entrypoint

[flake8]
max-line-length = 120

[mypy]
strict = True
check_untyped_defs = True
disallow_untyped_defs = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
ignore_missing_imports = True

# must be False, see https://github.com/python/mypy/issues/10757
disallow_untyped_calls = False

# Can't use this due to mypy/pyright having different ideas about cast()
warn_redundant_casts = False

[mypy-bytefmt.*]
ignore_missing_imports = False

[mypy-tests.*]
ignore_missing_imports = False

[pylint]
disable =
  invalid-name,
  missing-docstring,
  no-else-break,
  no-else-return,

[pylint.FORMAT]
max-line-length = 120

# EOF #
